# Wind2

./: .gitignore  CMakeLists.txt  Doxyfile  HACKING.md  compile_commands.json  default.nix  shell.nix
app/: CMakeLists.txt  main.cpp
dummy/: CMakeLists.txt  dummy.cpp
include/: AbstraceArranger.h  AbstractArranger.h  AbstractRenderer.h  Action.h  ArrangerSelector.h  Client.h  ConcreteActions.h  ConcreteArranger.h  ConfigReader.h  DefaultRenderer.h  Handlers.h  Holder.h  InputBuilder.h  InputManager.h  Inputstructs.h  Logger.h  Monitor.h  RuleBuilder.h  Rules.h  Topic.h  WindowManagerModel.h  X11_Abstraction.h  run.h  structs.h  util.h
install/: CMakeLists.txt  Wind.desktop
src/: Action.cpp  ArrangerSelector.cpp  CMakeLists.txt  ConcreteActions.cpp  ConcreteArranger.cpp  ConfigReader.cpp  Handlers.cpp  InputBuilder.cpp  InputManager.cpp  Inputstructs.cpp  KeyBuilder.cpp  Rule.cpp  RuleBuilder.cpp  WindowManagerModel.cpp  X11Abstraction.cpp  client.cpp  main.cpp  monitor.cpp  run.cpp  topic.cpp
test/: ArrangeTest.cpp  CMakeLists.txt  ClientMonitorIntegrationTest.cpp  ClientTopicIntegrationTest.cpp  Configtest.cpp  InputManagertest.cpp  RuleandRuleBuilderTest.cpp  TopicMonitorIntegrationTest.cpp  Wind.yaml  Wind2.yaml  WindowManagerModelConfigReaderIntegration.cpp  WindowManagerTest.cpp  client_unit_tests.cpp  monitor_unit_tests.cpp  topic_unit_tests.cpp
